# apps/api/src/modules/dates/schema.ts
@@ -1,4 +1,5 @@
 import { z } from "@hono/zod-openapi";
+import { TagSchema } from "../tags/schema.js";
 
 export const DateEventSchema = z
   .object({
@@ -17,6 +18,35 @@ export const DateEventSchema = z
   .openapi("DateEvent");
 
 export type DateEvent = z.infer<typeof DateEventSchema>;
+
+export const DateWithTagsSchema = z
+  .object({
+    id: z.uuid(),
+    title: z.string(),
+    description: z.string().optional().nullable(),
+    startsAt: z.date(),
+    endsAt: z.date().optional().nullable(),
+    completed: z.boolean(),
+    createdBy: z.uuid(),
+    groupId: z.uuid().nullable(),
+    createdAt: z.date(),
+    updatedAt: z.date(),
+    frequencyId: z.uuid().optional().nullable(),
+    tags: z.array(TagSchema),
+  })
+  .openapi("DateWithTags");
+
+export type DateWithTags = z.infer<typeof DateWithTagsSchema>;
+
+export const PaginatedDatesSchema = z
+  .object({
+    data: z.array(DateWithTagsSchema),
+    page: z.number(),
+    pageSize: z.number(),
+    total: z.number(),
+    totalPages: z.number(),
+  })
+  .openapi("PaginatedDates");
 
 export const NewDateEventSchema = z
   .object({
@@ -47,3 +77,4 @@ export const UpdateDateEventSchema = z
   .openapi("UpdateDateEvent");
 
 export type UpdateDateEvent = z.infer<typeof UpdateDateEventSchema>;
+
